--- a/views/new.jade
+++ b/views/new.jade
@@ -3,23 +3,12 @@ extends layout
 block content
 	form(method="post", action="/new")
 		p
-			input(type="text", name="app_date", placeholder"Enter the post title")
+			t Date: 
+			input(type="text", name="app_date", placeholder="Enter a date")
+		p
+			t Time: 
+			input(type="text", name="app_time", placeholder="Enter a time")
 		p
 			textarea(rows="10", cols="60", name="comments")
 		p
 			input(type="submit", value="Create")
-
-
-			//
-				extends layout
-
-				block content
-					form(method="post", action="/new")
-						p
-							input(type="text", name="post_title", placeholder"Enter the post title")
-						p
-							input(type="text", name="post_slug", placeholder"Enter the slug you want")
-						p
-							textarea(rows="18", cols="60", name="post_body")
-						p
-							input(type="submit", text="Submit")
