--- a/views/post.jade
+++ b/views/post.jade
@@ -1,22 +1,27 @@
 extends layout
 
 block content
-	h1= post.appDateTime
+	h1= post.appDate
+	h2= post.appTime
 
 	div.comments
 		p Comments
 		= post.comments
-
-	form(method="post", action="/book")
-		p
-			t Name:
-			input(type="text", name="user_name", placeholder="Enter your name")
-		p
-			t Phone Number:
-			input(type="text", name="phone_number", placeholder="Enter your #")
-		p
-			t Email Address:
-			input(type="text", size="40", name="email_address", placeholder="Enter your email address")
-		p
-			input(type="submit", value="Book this Appointment")
-			input(type="hidden", value="#{post.slug}" name="pass_slug")
+	if (user)
+		form(method="post", action="/book")
+			p
+				t Name: 
+					input(type="text", name="user_name", readonly value="#{user.name}")
+			p
+				t Phone Number: 
+				input(type="text", name="phone_number", readonly value="#{user.phoneNumber}")
+			p
+				t Email Address: 
+				input(type="text", size="40", name="email_address", readonly value="#{user.email}")
+			p
+				input(type="submit", value="Book this Appointment")
+				input(type="hidden", value="#{post.slug}" name="pass_slug")
+	else
+		p Please 
+			a(href="/auth/facebook") Login with Facebook 
+			to book an appointment
