--- a/views/post.jade
+++ b/views/post.jade
@@ -10,18 +10,19 @@ block content
 	if (user)
 		form(method="post", action="/book")
 			p
-				t Name: 
+				t Name:
 					input(type="text", name="user_name", readonly value="#{user.name}")
 			p
-				t Phone Number: 
+				t Phone Number:
 				input(type="text", name="phone_number", readonly value="#{user.phoneNumber}")
 			p
-				t Email Address: 
+				t Email Address:
 				input(type="text", size="40", name="email_address", readonly value="#{user.email}")
 			p
 				input(type="submit", value="Book this Appointment")
 				input(type="hidden", value="#{post.slug}" name="pass_slug")
+				input(type="hidden", value="#{user.facebookId}" name="pass_id")
 	else
-		p Please 
-			a(href="/auth/facebook") Login with Facebook 
+		p Please
+			a(href="/auth/facebook") Login with Facebook
 			to book an appointment
