--- a/views/new.jade
+++ b/views/new.jade
@@ -2,11 +2,20 @@ extends layout
 
 block content
 	form(method="post", action="/new")
+		if (error == 'success')
+			p
+				t Successfully added appointment
+		if (error == 'date')
+			p
+				t You must enter a date
+		if (error == 'time')
+			p
+				t You must enter a time
 		p
-			t Date: 
+			t Date:
 			input(type="text", name="app_date", placeholder="Enter a date")
 		p
-			t Time: 
+			t Time:
 			input(type="text", name="app_time", placeholder="Enter a time")
 		p
 			textarea(rows="10", cols="60", name="comments")
